--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "start": "node dist/index.js",
-        "start:dev": "cross-env NODE_ENV=dev DEBUG=app* node --watch --env-file=.env ./dist/index.js",
+        "start:dev": "cross-env NODE_ENV=dev DEBUG=demo* node --watch --env-file=.env ./dist/index.js",
         "build": "tsc -w",
         "test": "vitest run",
         "test:c": "vitest run --coverage",
@@ -23,6 +23,7 @@
         "@types/debug": "^4.1.12",
         "@types/express": "^5.0.0",
         "@types/minimist": "^1.2.5",
+        "@types/morgan": "^1.9.9",
         "@types/node": "^22.12.0",
         "eslint": "^9.19.0",
         "globals": "^15.14.0",
@@ -35,6 +36,7 @@
         "cross-env": "^7.0.3",
         "debug": "^4.4.0",
         "dotenv": "^16.4.7",
-        "express": "^4.21.2"
+        "express": "^4.21.2",
+        "morgan": "^1.10.0"
     }
 }
