--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-server",
+    "name": "11.express",
     "version": "1.0.0",
     "main": "index.js",
     "type": "module",
@@ -9,7 +9,7 @@
         "build": "tsc -w",
         "test": "vitest run",
         "test:c": "vitest run --coverage",
-        "lint": "eslint . --ext -ts"
+        "lint": "eslint . --ext .ts"
     },
     "keywords": [],
     "author": "",
@@ -20,9 +20,9 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/cors": "^2.8.17",
         "@types/debug": "^4.1.12",
         "@types/express": "^5.0.0",
-        "@types/minimist": "^1.2.5",
         "@types/morgan": "^1.9.9",
         "@types/node": "^22.12.0",
         "eslint": "^9.19.0",
@@ -33,6 +33,7 @@
         "vitest": "^3.0.4"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "debug": "^4.4.0",
         "dotenv": "^16.4.7",
